--- a/public/css/style.css
+++ b/public/css/style.css
@@ -115,3 +115,44 @@ a[card-product]:hover{
     text-decoration: none;
 }
 /* End Card product */
+
+/* sub-menu */
+.sub-menu {
+    position: relative ;
+    z-index: 999;
+}
+
+.sub-menu ul {
+    position: absolute;
+    left: 0;
+    top: 100%;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    background: #eae9e9;
+    min-width: 150px;
+    display: none;
+}
+
+.sub-menu ul li {
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+}
+
+.sub-menu:hover > ul {
+    display: block;
+}
+
+.sub-menu ul li:hover > ul {
+    display: block;
+    border-left: 1px solid #ddd;
+}
+
+.sub-menu ul li {
+    position: relative;
+}
+
+.sub-menu ul li ul {
+    left: 100%;
+    top: 0;
+}
