--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -1,15 +1,19 @@
+include ../mixins/sub-menu.pug
+
 header.header 
     .container 
         .row.align-item-center 
-            .col-3 
+            .col-1 
                 .inner-logo 
                     a(href='/')
                         img(src='/images/logo.png' alt='logo')
             
-            .col-9 
+            .col-3 
                 .inner-menu 
                     ul 
                         li 
                             a(href='/') Trang chủ
-                        li 
-                            a(href='/products') Sản phẩm 
+                        li(class='sub-menu')
+                            - const pathProduct = '/products'
+                            a(href=pathProduct) Sản phẩm 
+                                +sub-menu(layoutProductCategory, pathProduct)
