--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -34,6 +34,32 @@ block main
                 )
                     option(value="") --Chọn danh mục --     
                     +tree-level-category(category, 1)
+                    
+            div Sản phẩm nổi bật:
+            div(class="form-check form-check-inline mb-3 mr-5")
+                input(
+                    class="form-check-input" 
+                    type="radio" 
+                    name="featured" 
+                    id="featured-true" 
+                    value="true"
+                ) 
+                label(for="featured-true" 
+                class="form-check-label"
+                ) Có
+
+            div(class="form-check form-check-inline mb-3")
+                input(
+                    class="form-check-input" 
+                    type="radio" 
+                    name="featured" 
+                    id="featured-false" 
+                    value="false"
+                    checked
+                ) 
+                label(for="featured-false" 
+                class="form-check-label"
+                ) Không
 
             div(class="form-group")
                 label(for="description") Mô tả
