--- a/views/client/partials/footer.pug
+++ b/views/client/partials/footer.pug
@@ -1,2 +1,2 @@
 footer.footer 
-    | Copyright@ Hoàng Minh Khương
+    | Copyright@ <a href='https://www.facebook.com/khuongminhminh.hoang/' target='blank'>Hoàng Minh Khương</a>
