[client] Hiển thị danh sách sản phẩm theo danh mục

--- a/views/client/mixins/product-item.pug
+++ b/views/client/mixins/product-item.pug
@@ -1,6 +1,6 @@
 mixin product-item(product)
     .col-2.mb-3
-        a(href=`/products/${product.slug}` card-product)
+        a(href=`/products/detail/${product.slug}` card-product)
             .product-item
                 .inner-image 
                     img(
