[client] Tối ưu lại code

--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -23,4 +23,7 @@ header.header
                             - const pathArticle = '/articles'
                             a(href=pathArticle) Blog 
                                 +sub-menu(layoutArticleCategory, pathArticle)
-                        
+                                
+                        //- layoutProductCategory
+                        //- layoutArticleCategory
+                        //- đều lấy từ middleware chứ không phải từ controller trả về
