--- a/views/client/pages/products/detail.pug
+++ b/views/client/pages/products/detail.pug
@@ -2,32 +2,61 @@ extends ./../../layouts/default.pug
 include ./../../mixins/box-head.pug
 
 block main 
-    .container.my-3 
+    .product-detail
+        .container.my-5
+            .row 
+                .col-6
+                    .inner-thumb
+                        if (product.thumbnail)
+                            img(
+                                id="preview-image"
+                                class="img-thumbnail m-2"
+                                src=product.thumbnail
+                            )
+                .col-6  
+                    if (product.title)
+                        h1(class='inner-title') <b>#{product.title}</b>
+
+                    if (product.category)
+                        span(class='inner-stock') Danh mục: 
+                        a(href=`/products/${product.category.slug}`) #{product.category.title}
+                    
+                    if (product.price)
+                        div(class='inner-price-new') ₫#{(product.price * (100 - product.discountPercentage)/100).toFixed(0)}
+                        div(class='inner-price-old') ₫#{product.price}
+
+                    if (product.discountPercentage)
+                        div(class='inner-percent') #{product.discountPercentage}% GIẢM
+
+                    if (product.stock)
+                        div(class='inner-stock') Số lượng #{product.stock} sản phẩm có sẵn
+
+                    form(
+                        action=`/cart/add/${product.id}`
+                        method='POST'
+                    )
+                        input(
+                            class='form-control mb-2'
+                            type='number'
+                            name='quantity'
+                            value=1
+                            min=1
+                            max=product.stock
+                        )
+                        button(
+                            class='btn btn-success btn-block'
+                            type='submit'
+                        ) 
+                            svg(xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#fff" class="bi bi-cart-plus-fill" viewBox="0 0 20 20")
+                                path(d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0")
+                            
+                            | Thêm vào giỏ hàng
+            hr
+
+    .container.my-5 
         .row 
             .col-12 
-                +box-head("Chi tiết sản phẩm")
-        
-
-        if (product.title)
-            div Tên sản phẩm:  <b>#{product.title}</b>
-
-        if (product.thumbnail)
-            img(
-                id="preview-image"
-                class="img-thumbnail m-2"
-                src=product.thumbnail
-                width="150px"
-            )
-        
-        if (product.price)
-            div Giá: <b>#{product.price}</b>
-
-        if (product.discountPercentage)
-            div Giảm giá: <b>#{product.discountPercentage}%</b>
-
-        if (product.stock)
-            div Còn lại: <b>#{product.stock}</b>
-
-        if (product.description)
-            div !{product.description}    
+                +box-head("Mô tả sản phẩm")
+                if (product.description)
+                    div !{product.description}    
         
