--- a/views/admin/pages/articles/edit.pug
+++ b/views/admin/pages/articles/edit.pug
@@ -36,10 +36,37 @@ block main
                     option(value="") --Chọn danh mục bài viết --     
                     +tree-level-category(category, 1, article.articleCategoryId)
 
+            div Bài viết nổi bật:
+            div(class="form-check form-check-inline mb-3 mr-5")
+                input(
+                    class="form-check-input" 
+                    type="radio" 
+                    name="featured" 
+                    id="featured-true" 
+                    value="true"
+                    checked=(article.featured == true ? true : false)
+                ) 
+                label(for="featured-true" 
+                class="form-check-label"
+                ) Có
+
+            div(class="form-check form-check-inline mb-3")
+                input(
+                    class="form-check-input" 
+                    type="radio" 
+                    name="featured" 
+                    id="featured-false" 
+                    value="false"
+                    checked=(article.featured == false ? true : false)
+                ) 
+                label(for="featured-false" 
+                class="form-check-label"
+                ) Không
+
             div(class="form-group")
                 label(for="description") Mô tả ngắn
                 textarea(
-                    class="form-control text-mce"
+                    class="form-control"
                     id="description"
                     name="description"
                     placeholder="Mô tả..."
