--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -3,6 +3,7 @@ html
     head 
         title #{title}
         link(rel="stylesheet", href="/css/style.css")
+        link(rel="stylesheet", href="/css/article.css")
         link(rel="icon" href="/images/logo.png" type="image/x-icon")
         link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css")
 
