--- a/public/css/style.css
+++ b/public/css/style.css
@@ -216,7 +216,7 @@ a[card-product]:hover{
 
 /* End product detail */
 .bottom-bar {
-    width: 10%;
+    width: 100px;
     background-color: red;
     height: 2px;
     display: inline-block;
