--- a/views/client/pages/articles/index.pug
+++ b/views/client/pages/articles/index.pug
@@ -1,5 +1,6 @@
 extends ../../layouts/default.pug
 include ../../mixins/box-head.pug
+include ../../mixins/article-item.pug
 
 block main 
     .container.my-3 
@@ -10,44 +11,28 @@ block main
     div(class='container')
         div(class='row')
             div(class="col-6 article-featured") 
-                .inner-featured(style=`background-image: url(${featuredArticle[0].thumbnail})`)
+                .inner-featured(style=`background-image: url(${featuredArticles[0].thumbnail})`)
                     .content
-                        a(href=`/articles/detail/${featuredArticle[0].slug}`)
-                            p(class='inner-title') #{featuredArticle[0].title}
-                        p(class='inner-description') #{featuredArticle[0].description}
+                        a(href=`/articles/detail/${featuredArticles[0].slug}`)
+                            p(class='inner-title') #{featuredArticles[0].title}
+                        p(class='inner-description') #{featuredArticles[0].description}
                         p(class='inner-info') 
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#CFCFCF" class="bi bi-person-circle" viewBox="0 0 16 16">
                                 <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
                                 <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
                             </svg>
-                            span(class='m-2') #{featuredArticle[0].accountCreate.fullName} 
+                            span(class='m-2') #{featuredArticles[0].accountCreate.fullName} 
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#CFCFCF" class="bi bi-clock-history" viewBox="0 0 16 16">
                                 <path d="M8.515 1.019A7 7 0 0 0 8 1V0a8 8 0 0 1 .589.022zm2.004.45a7 7 0 0 0-.985-.299l.219-.976q.576.129 1.126.342zm1.37.71a7 7 0 0 0-.439-.27l.493-.87a8 8 0 0 1 .979.654l-.615.789a7 7 0 0 0-.418-.302zm1.834 1.79a7 7 0 0 0-.653-.796l.724-.69q.406.429.747.91zm.744 1.352a7 7 0 0 0-.214-.468l.893-.45a8 8 0 0 1 .45 1.088l-.95.313a7 7 0 0 0-.179-.483m.53 2.507a7 7 0 0 0-.1-1.025l.985-.17q.1.58.116 1.17zm-.131 1.538q.05-.254.081-.51l.993.123a8 8 0 0 1-.23 1.155l-.964-.267q.069-.247.12-.501m-.952 2.379q.276-.436.486-.908l.914.405q-.24.54-.555 1.038zm-.964 1.205q.183-.183.35-.378l.758.653a8 8 0 0 1-.401.432z"/>
                                 <path d="M8 1a7 7 0 1 0 4.95 11.95l.707.707A8.001 8.001 0 1 1 8 0z"/>
                                 <path d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5"/>
                             </svg>
-                            span(class='ml-1') #{featuredArticle[0].dateTimeCreate} 
+                            span(class='ml-1') #{featuredArticles[0].dateTimeCreate} 
 
-            div(class="col-6")
+            div(class="col-6 p-0")
                 ul
-                    each item in featuredArticle.slice(1)
-                        li(class='card-article')
-                            img(
-                                src=item.thumbnail
-                            )
-                            a(href=`/articles/detail/${item.slug}` class='inner-title') #{item.title}
-                            p(class='inner-info') 
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#1A6DB4" class="bi bi-person-circle" viewBox="0 0 16 16">
-                                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
-                                    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
-                                </svg>
-                                span(class='m-2') #{item.accountCreate.fullName}
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#6C7B88" class="bi bi-clock-history" viewBox="0 0 16 16">
-                                    <path d="M8.515 1.019A7 7 0 0 0 8 1V0a8 8 0 0 1 .589.022zm2.004.45a7 7 0 0 0-.985-.299l.219-.976q.576.129 1.126.342zm1.37.71a7 7 0 0 0-.439-.27l.493-.87a8 8 0 0 1 .979.654l-.615.789a7 7 0 0 0-.418-.302zm1.834 1.79a7 7 0 0 0-.653-.796l.724-.69q.406.429.747.91zm.744 1.352a7 7 0 0 0-.214-.468l.893-.45a8 8 0 0 1 .45 1.088l-.95.313a7 7 0 0 0-.179-.483m.53 2.507a7 7 0 0 0-.1-1.025l.985-.17q.1.58.116 1.17zm-.131 1.538q.05-.254.081-.51l.993.123a8 8 0 0 1-.23 1.155l-.964-.267q.069-.247.12-.501m-.952 2.379q.276-.436.486-.908l.914.405q-.24.54-.555 1.038zm-.964 1.205q.183-.183.35-.378l.758.653a8 8 0 0 1-.401.432z"/>
-                                    <path d="M8 1a7 7 0 1 0 4.95 11.95l.707.707A8.001 8.001 0 1 1 8 0z"/>
-                                    <path d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5"/>
-                                </svg>
-                                span(class='ml-1') #{item.dateTimeCreate}
+                    each item in featuredArticles.slice(1)
+                        +article-item(item)
                     
         hr
     .container.my-3 
@@ -56,40 +41,8 @@ block main
                 +box-head('TIN TỨC MỚI NHẤT')
 
                 ul
-                    li(class='card-article')
-                        img(
-                            src=featuredArticle[0].thumbnail
-                        )
-                        a(href=`/articles/detail/${featuredArticle[0].slug}` class='inner-title') #{featuredArticle[0].title}
-                        p(class='inner-info') 
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#1A6DB4" class="bi bi-person-circle" viewBox="0 0 16 16">
-                                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
-                                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
-                            </svg>
-                            span(class='m-2') #{featuredArticle[0].accountCreate.fullName}
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#6C7B88" class="bi bi-clock-history" viewBox="0 0 16 16">
-                                <path d="M8.515 1.019A7 7 0 0 0 8 1V0a8 8 0 0 1 .589.022zm2.004.45a7 7 0 0 0-.985-.299l.219-.976q.576.129 1.126.342zm1.37.71a7 7 0 0 0-.439-.27l.493-.87a8 8 0 0 1 .979.654l-.615.789a7 7 0 0 0-.418-.302zm1.834 1.79a7 7 0 0 0-.653-.796l.724-.69q.406.429.747.91zm.744 1.352a7 7 0 0 0-.214-.468l.893-.45a8 8 0 0 1 .45 1.088l-.95.313a7 7 0 0 0-.179-.483m.53 2.507a7 7 0 0 0-.1-1.025l.985-.17q.1.58.116 1.17zm-.131 1.538q.05-.254.081-.51l.993.123a8 8 0 0 1-.23 1.155l-.964-.267q.069-.247.12-.501m-.952 2.379q.276-.436.486-.908l.914.405q-.24.54-.555 1.038zm-.964 1.205q.183-.183.35-.378l.758.653a8 8 0 0 1-.401.432z"/>
-                                <path d="M8 1a7 7 0 1 0 4.95 11.95l.707.707A8.001 8.001 0 1 1 8 0z"/>
-                                <path d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5"/>
-                            </svg>
-                            span(class='ml-1') #{featuredArticle[0].dateTimeCreate}
-                    li(class='card-article')
-                        img(
-                            src=featuredArticle[2].thumbnail
-                        )
-                        a(href=`/articles/detail/${featuredArticle[2].slug}` class='inner-title') #{featuredArticle[2].title}
-                        p(class='inner-info') 
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#1A6DB4" class="bi bi-person-circle" viewBox="0 0 16 16">
-                                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
-                                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
-                            </svg>
-                            span(class='m-2') #{featuredArticle[2].accountCreate.fullName}
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#6C7B88" class="bi bi-clock-history" viewBox="0 0 16 16">
-                                <path d="M8.515 1.019A7 7 0 0 0 8 1V0a8 8 0 0 1 .589.022zm2.004.45a7 7 0 0 0-.985-.299l.219-.976q.576.129 1.126.342zm1.37.71a7 7 0 0 0-.439-.27l.493-.87a8 8 0 0 1 .979.654l-.615.789a7 7 0 0 0-.418-.302zm1.834 1.79a7 7 0 0 0-.653-.796l.724-.69q.406.429.747.91zm.744 1.352a7 7 0 0 0-.214-.468l.893-.45a8 8 0 0 1 .45 1.088l-.95.313a7 7 0 0 0-.179-.483m.53 2.507a7 7 0 0 0-.1-1.025l.985-.17q.1.58.116 1.17zm-.131 1.538q.05-.254.081-.51l.993.123a8 8 0 0 1-.23 1.155l-.964-.267q.069-.247.12-.501m-.952 2.379q.276-.436.486-.908l.914.405q-.24.54-.555 1.038zm-.964 1.205q.183-.183.35-.378l.758.653a8 8 0 0 1-.401.432z"/>
-                                <path d="M8 1a7 7 0 1 0 4.95 11.95l.707.707A8.001 8.001 0 1 1 8 0z"/>
-                                <path d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5"/>
-                            </svg>
-                            span(class='ml-1') #{featuredArticle[2].dateTimeCreate}
+                    each item in newestArticles
+                        +article-item(item)
 
             .col-4      
                 +box-head('KHÁM PHÁ - TRENDING')
