--- a/views/client/pages/products/detail.pug
+++ b/views/client/pages/products/detail.pug
@@ -28,7 +28,7 @@ block main
                     if (product.discountPercentage)
                         div(class='inner-percent') #{product.discountPercentage}% GIẢM
 
-                    if (product.stock)
+                    if (product.stock != undefined)
                         div(class='inner-stock') Số lượng #{product.stock} sản phẩm có sẵn
 
                     form(
@@ -39,18 +39,28 @@ block main
                             class='form-control mb-2'
                             type='number'
                             name='quantity'
-                            value=1
+                            value= (product.stock == 0 ? 0 : 1)
                             min=1
                             max=product.stock
+                            readonly= (product.stock == 0 ? true : false)
                         )
-                        button(
-                            class='btn btn-success btn-block'
-                            type='submit'
-                        ) 
-                            svg(xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#fff" class="bi bi-cart-plus-fill" viewBox="0 0 20 20")
-                                path(d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0")
-                            
-                            | Thêm vào giỏ hàng
+                        if (product.stock > 0)
+                            button(
+                                class='btn btn-success btn-block'
+                                type='submit'
+                            ) 
+                                svg(xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#fff" class="bi bi-cart-plus-fill" viewBox="0 0 20 20")
+                                    path(d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0")
+                                
+                                | Thêm vào giỏ hàng
+                        else
+                            span(
+                                class='btn btn-secondary btn-block'
+                            ) 
+                                svg(xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#fff" class="bi bi-cart-plus-fill" viewBox="0 0 20 20")
+                                    path(d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0")
+                                
+                                | Thêm vào giỏ hàng
             hr
 
     .container.my-5 
