--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -6,6 +6,7 @@ html
         link(rel="stylesheet", href="/css/article.css")
         link(rel="icon" href="/images/logo.png" type="image/x-icon")
         link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css")
+        link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css")
 
     body 
         include ../partials/header.pug
