--- a/views/client/pages/cart/index.pug
+++ b/views/client/pages/cart/index.pug
@@ -11,24 +11,27 @@ block main
             .col-8 
                 ul(class='list-unstyled')
                     hr
-                    each item in products
-                        li(class="media" id=item.id)
-                            div(class='image-container')
-                                img(src=item.thumbnail class='mr-3 ' alt='Ảnh sản phẩm')
-                            div(class="media-body ml-3")
-                                a(href=`/products/detail/${item.slug}` class="mt-0 inner-title d-block") #{item.title}
-                                p 
-                                    span (Tùy chọn size - màu)
-                                div(class='inner-counter')
-                                    div(class='sub-counter') - 
-                                    input(type='number' class='input-counter' value=item.quantity min='1' max=(item.stock + item.quantity))
-                                    div(class='add-counter') +
-                                div(class='inner-price') #{item.totalPrice}đ
-                                button(class='close') 
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
-                                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
-                                    </svg>
-                        hr
+                    if (products.length > 0)
+                        each item in products
+                            li(class="media")
+                                div(class='image-container')
+                                    img(src=item.thumbnail class='mr-3 ' alt='Ảnh sản phẩm')
+                                div(class="media-body ml-3")
+                                    a(href=`/products/detail/${item.slug}` class="mt-0 inner-title d-block") #{item.title}
+                                    p 
+                                        span (Tùy chọn size - màu)
+                                    div(class='inner-counter')
+                                        div(class='sub-counter') - 
+                                        input(type='number' class='input-counter' value=item.quantity min='1' max=(item.stock + item.quantity))
+                                        div(class='add-counter') +
+                                    div(class='inner-price') #{item.totalPrice}đ
+                                    a(class='close' href=`/cart/delete/${item.id}`) 
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                                            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+                                        </svg>
+                            hr
+                    else 
+                        div(class='text-center text-danger') Giỏ hàng trống
             .col-4 
                 div(class="modal-dialog card-checkout")
                     div(class="modal-content")
