--- a/public/css/style.css
+++ b/public/css/style.css
@@ -356,3 +356,29 @@ input[type="number"]::-webkit-inner-spin-button {
 
 /* End card checkout */
 
+/* Notification */
+[show-alert]{
+    position: fixed;
+    top: 70px;
+    right: 15px;
+    width: 25%;
+    z-index: 999;
+}
+
+[show-alert].show-hidden {
+    animation-name: alert-hidden;
+    animation-duration: 0.5s;
+    animation-fill-mode: both;
+}
+
+@keyframes alert-hidden {
+    from {
+        right: 15px;
+    }
+    to {
+        right: -100%;
+        display: none;
+    }
+}
+
+/* End Notification */
