[client] Đăng nhập + đăng ký

--- a/views/client/partials/footer.pug
+++ b/views/client/partials/footer.pug
@@ -3,20 +3,20 @@
 footer.bg-info.text-right
     .container.p-4.pb-0
         section.mb-4
-            a.btn.rounded-circle.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #3b5998;' href='https://www.facebook.com/khuongminhminh.hoang/' role='button' target='_blank')
+            a.btn.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #3b5998;' href='https://www.facebook.com/khuongminhminh.hoang/' role='button' target='_blank')
                 i.fab.fa-facebook-f
-            a.btn.rounded-circle.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #55acee;' href='https://x.com/Khuongmihhoang' role='button' target='_blank')
+            a.btn.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #55acee;' href='https://x.com/Khuongmihhoang' role='button' target='_blank')
                 i.fab.fa-twitter
-            a.btn.rounded-circle.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #dd4b39;' href='#!' role='button')
+            a.btn.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #dd4b39;' href='#!' role='button')
                 i.fab.fa-google
-            a.btn.rounded-circle.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #ac2bac;' href='#!' role='button')
+            a.btn.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #ac2bac;' href='#!' role='button')
                 i.fab.fa-instagram
-            a.btn.rounded-circle.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #0082ca;' href='https://t.me/khuongminhhoang' role='button' target='_blank')
+            a.btn.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #0082ca;' href='https://t.me/khuongminhhoang' role='button' target='_blank')
                 i.fab.fa-telegram
-            a.btn.rounded-circle.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #333333;' href='https://github.com/khuonggminhhoang' role='button' target='_blank')
+            a.btn.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #333333;' href='https://github.com/khuonggminhhoang' role='button' target='_blank')
                 i.fab.fa-github
 
         
     .text-center.p-3(style='background-color: rgba(0, 0, 0, 0.05);')
-        | &copy; 2020 Copyright: 
+        | &copy; 2024 Copyright: 
         a.text-body(href='https://www.facebook.com/khuongminhminh.hoang/' target='_blank') Hoàng Minh Khương
