--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -1,8 +1,13 @@
 extends ../../layouts/default.pug
 include ./../../mixins/box-head.pug
 include ./../../mixins/layout-grid.pug
+include ../../mixins/notification-error.pug
+include ../../mixins/notification-success.pug
 
 block main 
+    +notification-success(messages.success)
+    +notification-error(messages.error)
+
     .section-product-featured.my-5
         .container
             .row 
