--- a/views/client/mixins/form-search.pug
+++ b/views/client/mixins/form-search.pug
@@ -17,4 +17,5 @@ mixin form-search()
                 button(
                     type="submit" 
                     class=`btn btn-success`
-                ) Tìm
+                ) 
+                    i(class="fa-solid fa-magnifying-glass")
