--- a/views/client/pages/users/register.pug
+++ b/views/client/pages/users/register.pug
@@ -72,5 +72,5 @@ block main
                     div(class="form-group")
                         button(type='submit' class='btn btn-primary btn-block') Đăng ký
                     hr.my-4
-                    p Bạn đã có tài khoản?
-                        a(href='/user/login') Đăng nhập.
+                    p Bạn đã có tài khoản? Đăng nhập 
+                        a(href='/user/login') tại đây.
