[client] Tạo tính năng quên mật khẩu

--- a/views/client/pages/users/login.pug
+++ b/views/client/pages/users/login.pug
@@ -40,7 +40,6 @@ block main
                     div(class="form-group")
                         button(type='submit' class='btn btn-primary btn-block') Đăng nhập
                     hr.my-4
-                    a(href='/user/reset')
-                        small(class="form-text text-primary") Quên mật khẩu
+                    a(href='/user/password/forgot') Quên mật khẩu?
                     p Bạn chưa có tài khoản?
                         a(href='/user/register') Đăng ký.
