[client] Tạo tính năng quên mật khẩu + gửi nhận dùng nodemailer

--- a/views/client/pages/users/otp-password.pug
+++ b/views/client/pages/users/otp-password.pug
@@ -25,15 +25,18 @@ block main
                         )
 
                     div(class="form-group")
-                        label(for="otp") Mã OTP <span class='text text-danger'>*</span>
+                        label(for="otp") Mã OTP <span class='text text-danger'>*</span> (
+                            span(class='count-down') 60
+                            span )s
                         input(
                             type="text" 
                             class="form-control"
                             id="otp"
                             name="otp"
                             placeholder="Ví dụ: 22334455"
+                            required
                         )
 
                     div(class="form-group")
-                        button(type='submit' class='btn btn-primary btn-block') Xác thực
+                        button(type='submit' class='btn btn-primary btn-block' confirm-in-time) Xác thực
                     hr.my-4
