--- a/views/client/pages/users/otp-password.pug
+++ b/views/client/pages/users/otp-password.pug
@@ -36,6 +36,8 @@ block main
                             placeholder="Ví dụ: 22334455"
                             required
                         )
+                        a(href=`/user/password/otp?email=${email}` class='btn btn-info') Gửi lại OTP
+                        
 
                     div(class="form-group")
                         button(type='submit' class='btn btn-primary btn-block' confirm-in-time) Xác thực
