[client] update trang thanh toán

--- a/views/client/pages/checkout/index.pug
+++ b/views/client/pages/checkout/index.pug
@@ -30,6 +30,7 @@ block main
                                     name='fullName'
                                     placeholder='Nguyễn Văn A'
                                     class='form-control mb-3'
+                                    value=user.fullName
                                     required
                                 )
 
@@ -41,6 +42,7 @@ block main
                                     name='phone'
                                     placeholder='0123456789'
                                     class='form-control mb-3'
+                                    value=user.phone
                                     required
                                 )
 
@@ -52,6 +54,7 @@ block main
                                     name='address'
                                     placeholder='Mộ Lao - Hà Đông - Hà Nội'
                                     class='form-control mb-3'
+                                    value=user.address
                                     required
                                 )
 
