[admin] Tạo phần cài đặt chung bên admin

--- a/views/client/pages/users/info.pug
+++ b/views/client/pages/users/info.pug
@@ -16,9 +16,8 @@ block main
                         
                     div(class="modal-body")
                         label.text-muted.text-right Số điện thoại mới 
-                        span(class='pl-3 input-group input-group-sm')
-                            input(type='text' class='form-control' name='phone' placeholder='Ví dụ: 0344836527')
-                            p(class='text text-muted text-sm') Nhập đúng định dạng số điện thoại
+                        input(type='text' class='form-control' name='phone' placeholder='Ví dụ: 0344836527')
+                        small(class='text text-muted') Nhập đúng định dạng số điện thoại
 
                     div(class="modal-footer")
                         button(type="button" class="btn btn-secondary" data-dismiss="modal") Đóng 
