--- a/views/client/partials/footer.pug
+++ b/views/client/partials/footer.pug
@@ -15,7 +15,9 @@ footer.bg-info.text-right
                 i.fab.fa-telegram
             a.btn.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #333333;' href='https://github.com/khuonggminhhoang' role='button' target='_blank')
                 i.fab.fa-github
-
+        .row 
+            .col-3
+                div !{settingGeneral.map}
         
     .text-center.p-3(style='background-color: rgba(0, 0, 0, 0.05);')
         | &copy; 2024 Copyright: 
